[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sprite-0003-minerpunch2.png" type="Texture" id=1]
[ext_resource path="res://Player2Test.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprite-0002-minerpunch1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprite-0003- miner.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites part2/Sprite-0009-miner1-running.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 12, 17 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Punch",
"speed": 8.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "Running",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.5, 2.25 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 12, 17 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7, 28 )
shape = SubResource( 8 )

[node name="P2" type="AnimatedSprite" parent="."]
position = Vector2( -8, 29 )
scale = Vector2( 0.563125, 0.465062 )
z_index = -1
frames = SubResource( 7 )
animation = "Idle"
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -6, 44 )
shape = SubResource( 4 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hitbox" type="Area2D" parent="." groups=["hitbox"]]
collision_layer = 16
collision_mask = 16

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -7, 28 )
shape = SubResource( 9 )

[node name="PunchPosition" type="Position2D" parent="."]
position = Vector2( 6, 32 )

[connection signal="animation_finished" from="P2" to="." method="_on_P2_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
